--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ x-nfs-volume-opts: &nfs-volume-opts
     device: ":/path/to/be/overridden"
 
 services:
-#  ██████╗ ██╗     ██╗   ██╗███████╗████████╗██╗  ██╗███╗   ██╗
-# ██╔════╝ ██║     ██║   ██║██╔════╝╚══██╔══╝██║  ██║████╗  ██║
-# ██║  ███╗██║     ██║   ██║█████╗     ██║   ██║  ██║██╔██╗ ██║
-# ██║   ██║██║     ██║   ██║██╔══╝     ██║   ██║  ██║██║╚██╗██║
-# ╚██████╔╝███████╗╚██████╔╝███████╗   ██║   ╚██████╔╝██║ ╚████║
-#  ╚═════╝ ╚══════╝ ╚═════╝ ╚══════╝   ╚═╝    ╚═════╝ ╚═╝  ╚═══╝
+  #  ██████╗ ██╗      ██╗    ██╗███████╗████████╗██╗  ██╗███╗   ██╗
+  # ██╔════╝ ██║      ██║    ██║██╔════╝╚══██╔══╝██║  ██║████╗  ██║
+  # ██║  ███╗██║      ██║    ██║█████╗      ██║   ██║  ██║██╔██╗ ██║
+  # ██║   ██║██║      ██║    ██║██╔══╝      ██║   ██║  ██║██║╚██╗██║
+  # ╚██████╔╝███████╗╚██████╔╝███████╗    ██║   ╚██████╔╝██║ ╚████║
+  #  ╚═════╝ ╚══════╝ ╚═════╝ ╚══════╝    ╚═╝    ╚═════╝ ╚═╝  ╚═══╝
   gluetun:
     image: qmcgaw/gluetun:latest
     container_name: gluetun
@@ -34,7 +34,8 @@ services:
       - 1.1.1.1
       - 8.8.8.8
     volumes:
-      -./gluetun-config:/gluetun
+      # CORRECTED: Added space after the hyphen and fixed indentation.
+      - ./gluetun-config:/gluetun
     environment:
       - VPN_SERVICE_PROVIDER=surfshark
       - VPN_TYPE=openvpn
@@ -44,12 +45,12 @@ services:
       - FIREWALL_OUTBOUND_SUBNETS=192.168.1.0/24,10.20.10.27/32
     restart: unless-stopped
 
-# ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
-# ████╗  ██║╚══███╔╝██╔══██╗██╔════╝ ██╔════╝╚══██╔══╝
-# ██╔██╗ ██║  ███╔╝ ██████╔╝██║  ███╗█████╗     ██║
-# ██║╚██╗██║ ███╔╝  ██╔══██╗██║   ██║██╔══╝     ██║
-# ██║ ╚████║███████╗██████╔╝╚██████╔╝███████╗   ██║
-# ╚═╝  ╚═══╝╚══════╝╚═════╝  ╚═════╝ ╚══════╝   ╚═╝
+  # ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
+  # ████╗  ██║╚══███╔╝██╔══██╗██╔════╝ ██╔════╝╚══██╔══╝
+  # ██╔██╗ ██║  ███╔╝ ██████╔╝██║  ███╗█████╗      ██║
+  # ██║╚██╗██║ ███╔╝  ██╔══██╗██║   ██║██╔══╝      ██║
+  # ██║ ╚████║███████╗██████╔╝╚██████╔╝███████╗    ██║
+  # ╚═╝  ╚═══╝╚══════╝╚═════╝  ╚═════╝ ╚══════╝    ╚═╝
   nzbget:
     image: lscr.io/linuxserver/nzbget:latest
     container_name: nzbget
@@ -61,12 +62,12 @@ services:
     env_file:
       - '.env'
 
-# ██████╗ ██████╗ ██╗████████╗████████╗ ██████╗ ██████╗ ██████╗ ███████╗███╗   ██╗████████╗
-# ██╔═══██╗██╔══██╗██║╚══██╔══╝╚══██╔══╝██╔═══██╗██╔══██╗██╔══██╗██╔════╝████╗  ██║╚══██╔══╝
-# ██║   ██║██████╔╝██║   ██║      ██║   ██║   ██║██████╔╝██████╔╝█████╗  ██╔██╗ ██║   ██║
-# ██║▄▄ ██║██╔══██╗██║   ██║      ██║   ██║   ██║██╔══██╗██╔══██╗██╔══╝  ██║╚██╗██║   ██║
-# ╚██████╔╝██████╔╝██║   ██║      ██║   ╚██████╔╝██║  ██║██║  ██║███████╗██║ ╚████║   ██║
-#  ╚══▀▀═╝ ╚═════╝ ╚═╝   ╚═╝      ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝   ╚═╝
+  # ██████╗ ██████╗ ██╗████████╗████████╗ ██████╗ ██████╗ ██████╗ ███████╗███╗   ██╗████████╗
+  # ██╔═══██╗██╔══██╗██║╚══██╔══╝╚══██╔══╝██╔═══██╗██╔══██╗██╔══██╗██╔════╝████╗  ██║╚══██╔══╝
+  # ██║   ██║██████╔╝██║   ██║      ██║   ██║   ██║██████╔╝██████╔╝█████╗  ██╔██╗ ██║   ██║
+  # ██║▄▄ ██║██╔══██╗██║   ██║      ██║   ██║   ██║██╔══██╗██╔══██╗██╔══╝  ██║╚██╗██║   ██║
+  # ╚██████╔╝██████╔╝██║   ██║      ██║   ╚██████╔╝██║  ██║██║  ██║███████╗██║ ╚████║   ██║
+  #  ╚══▀▀═╝ ╚═════╝ ╚═╝   ╚═╝      ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝   ╚═╝
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
@@ -75,12 +76,12 @@ services:
     volumes:
       - qbittorrent_config:/config
       - downloads:/downloads
-    # PUID/PGID are now correctly sourced from the.env file
+    # PUID/PGID are now correctly sourced from the .env file
     # along with TZ and other variables.
     env_file:
       - '.env'
 
-# Other services follow, using the same structure...
+  # Other services follow, using the same structure...
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
