--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,8 +84,10 @@ services:
      - TZ=Europe/Warsaw # Set your timezone
     # No need to expose the port to the host if only other containers need it
     # But if you want to access its UI/API from your host, uncomment the line below
-    # ports:
+    ports:
       - "8191:8191"
+    volumes:
+      - flaresolverr_config:/config
     restart: unless-stopped
     
   prowlarr:
@@ -317,3 +319,9 @@ volumes:
       type: nfs
       o: "addr=10.20.10.27,rw,hard,noatime,nfsvers=3"
       device: ":/volume1/DOCKER/Arr-Stack/Emby/config"
+ flaresolverr_config:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: "addr=10.20.10.27,rw,hard,noatime,nfsvers=3"
+      device: ":/volume1/DOCKER/Arr-Stack/Flaresolverr/config"
